--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,20 @@
 <resources>
     <string name="app_name">Rik stats</string>
 
-    <string name="visitors_more">The number of visitors has increased this month</string>
+    <string name="visitors_more">Of visitors has increased this month</string>
+    <string name="visitors_less">Of users stopped to observe you</string>
     <string name="statistic">Statistic</string>
     <string name="visitors">Visitors</string>
+    <string name="by_days">By days</string>
+    <string name="by_weeks">By weeks</string>
+    <string name="by_months">By months</string>
+    <string name="most_often_visitors">The most often visiting your profile</string>
+    <string name="gender_age">Gender and age</string>
+    <string name="today">Today</string>
+    <string name="week">Week</string>
+    <string name="month">Month</string>
+    <string name="all_time">All time</string>
+    <string name="observers">Observers</string>
 
     <string name="descr_positive_chart">The graph is going up</string>
     <string name="descr_negative_chart">The graph is going down</string>
